<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <include
        android:id="@+id/toolbarDetail"
        layout="@layout/toolbar_detail"/>

    <TextView
        android:id="@+id/tv_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/toolbarDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_news_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_source"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_news_title"
        app:layout_constraintStart_toStartOf="@+id/tv_news_title"/>

    <TextView
        android:id="@+id/tv_news_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_time"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_news_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_news_source" />

    <ImageView
        android:id="@+id/iv_news"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_150sdp"
        android:scaleType="fitXY"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/image_description"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_news_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="@dimen/_15sdp"
        app:srcCompat="@drawable/ic_not_bookmark"
        android:contentDescription="@string/tvBookmark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_news_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_subtitle"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/iv_news"
        app:layout_constraintStart_toStartOf="@+id/tv_news_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>