<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_news_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_news_thumbnail"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_125sdp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_description"
                tools:src="@tools:sample/avatars"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_title"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@id/cv_news_thumbnail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_news_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_subtitle"
            android:textSize="@dimen/_10ssp"
            app:layout_constrainedWidth="true"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_news_title"
            app:layout_constraintStart_toStartOf="@id/tv_news_title"
            app:layout_constraintEnd_toEndOf="@id/tv_news_title"/>

        <TextView
            android:id="@+id/tv_news_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_time"
            android:textSize="@dimen/_10ssp"
            app:layout_constrainedWidth="true"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_news_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>